<resources>
    <string name="app_name">SkilEx</string>
    <string name="tag_line">THE ULTIMATE SERVICE APP</string>
    <string name="empty" />
    <string name="error_no_net">No internet access. Please check your connection and try again.</string>
    <string name="error_occurred">Failed to connect to the server. Please try again.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="booking_terms">I, agree to the </string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="alert_button_ok">OK</string>
    <string name="alert_button_cancel">Cancel</string>
    <string name="alert_button_yes">Yes</string>
    <string name="alert_button_no">No</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="agree">I, agree to the </string>
    <string name="agree_alert">Agree to the terms to continue</string>
    <string name="all_cancel">All orders cancelled</string>
    <string name="terms_and_conditions"> Terms and Conditions </string>
    <string name="skilex_service"> of SkilEx services.</string>
    <string name="referral">Referral Code (Optional)</string>
    <string name="refer_friends">Refer Friends</string>
    <string name="wallet_add_money">Proceed to add money</string>
    <string name="enter_wallet_money">₹   Enter Amount</string>
    <string name="proceed_add_money">Add money to</string>
    <string name="total_points">Total Points Earned</string>
    <string name="popular_services">Most popular services from Skilex</string>
    <string name="claim">Claim Reward</string>
    <string name="earn_amt">Earn Amount</string>
    <string name="earn_amt_line">Invite your friends to SkilEx and earn more money!</string>
    <string name="mobile_number_tag">: \n</string>
    <string name="user_name">Name</string>
    <string name="address_activity">Address</string>
    <string name="user_address">Door No/Building Name/Street Name</string>
    <string name="user_address1">Area/Locality</string>
    <string name="user_mail">E-Mail</string>
    <string name="user_gender">Gender</string>
    <string name="select_user_gender">Select Gender</string>
    <string name="submit">Submit</string>
    <string name="trend">Trending Services</string>
    <string name="trend_text">Take a look at some of the popular services from SkilEx!</string>
    <string name="google_android_map_api_key">AIzaSyDyXHfwZjnPVy5reE5XPRZfmqMJd254hj4</string>
    <string name="facebook_app_id">1654012428093090</string>
    <string name="login">Login</string>
    <string name="skip_login">Skip for now</string>
    <string name="skip">Skip</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_text">Enter Mobile Number</string>
    <string name="login_to_continue">Log in to continue</string>
    <string name="confirm">Confirm</string>
    <string name="progress_loading">Loading&#8230;</string>
    <string name="error_entry">Entry Invalid</string>
    <string name="error_mail">Enter vaild mail ID</string>
    <string name="error_number">Enter vaild phone number</string>
    <string name="empty_entry">Field cannot be empty</string>
    <string name="empty_address">Pin location on map to get address</string>
    <string name="empty_locality">Enter proper locality or pin location on map</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">Allow app to access your location?</string>
    <string name="time">Select Time Slot</string>
    <string name="date">Select Date</string>
    <string name="time_selected">Requested Time Slot</string>
    <string name="date_selected">Selected Date</string>
    <string name="customer_name">Customer Name</string>
    <string name="cart">Cart</string>
    <string name="cart_clear">Items in cart will be cleared. Do you wish to continue?</string>
    <string name="cart_clear_1">Kindly select only one service from sub-category , Additional Service will be added by the service expert during the service time.</string>
    <string name="proceed_more">Clear &amp; Proceed</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose your prefered language</string>
    <string name="verificationcode">Enter Verification Code</string>
    <string name="didntrecievecode">Didn\'t receive the code?\t</string>
    <string name="entercodetxt">We have sent a 4 digit verification code \n to your mobile number</string>
    <string name="resend">Resend now</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="changenumber">Change number</string>
    <string name="home">Home</string>
    <string name="services">Services</string>
    <string name="category">Category</string>
    <string name="category_title">SkilEx Services</string>
    <string name="subcategory">Sub Category</string>
    <string name="search_result">Search Result</string>
    <string name="search">Search</string>
    <string name="req_services">Requested Services</string>
    <string name="ong_services">Ongoing Services</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="wallet_title">Skilex Wallet</string>
    <string name="use_wallet_amt">Pay by wallet</string>
    <string name="service_history">Service History</string>
    <string name="service_detail">Service Detail</string>
    <string name="service_cost">Cost after inspection. Minimum charge is</string>
    <string name="book_now">Book Now</string>
    <string name="save_address">Save Address</string>
    <string name="inclusion">Inclusions</string>
    <string name="exclusion">Exclusion</string>
    <string name="procedure">Procedure</string>
    <string name="remove_service">Service Removed</string>
    <string name="others">Others</string>
    <string name="reason">Reason</string>
    <string name="comment">Comment</string>
    <string name="note">Notes (Optional)</string>
    <string name="cancel_service_alert">If you cancel you will not be refunded the advance amount paid. Are you sure you want to cancel?</string>
    <string name="cancel_service_noadvance_alert1">Are you sure you want to cancel your service?</string>
    <string name="about_service_person">About Service Expert</string>
    <string name="service_provider">Service Commando</string>
    <string name="service_starting_time">Service starting time</string>
    <string name="service_restarting_time">Service restarting time</string>
    <string name="service_restarting_date">Service restarting date</string>
    <string name="service_approximate">Estimated cost</string>
    <string name="cancel_service">Cancel Service</string>
    <string name="track">Tracking</string>
    <string name="booking">Booking summary</string>
    <string name="booking_status">Booking status</string>
    <string name="service_charge">Service charge</string>
    <string name="additional_charge">Additional charge</string>
    <string name="travel_allowance">Travel Allowance</string>
    <string name="additional_services">Additional Services</string>
    <string name="materials_used">Materials Used</string>
    <string name="book_terms_content">*Any Specific details about the service or regarding material.</string>
    <string name="pay_terms_content">*The Prices are exclusive of materials/spares required for the job and the same should be provided by the customer.</string>
    <string name="grand_total">Total Service Cost</string>
    <string name="view_summary">View Summary</string>
    <string name="service_summary">Service Summary</string>
    <string name="clear">Clear All</string>
    <string name="choose_address">Choose Address</string>
    <string name="manage_address">Manage Address</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="access_code">Access Code</string>
    <string name="access_code_value">AVQM86GG76CA98MQAC</string>
    <string name="pay_button">Pay</string>
    <string name="pay_button_online">Pay Online</string>
    <string name="pay_button_cash">Pay by Cash</string>
    <string name="payment">Payment</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="merchant_id_value">225068</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="redirect_url_advance">https://www.skilex.in/development/ccavenue_app/customer_advance.php</string>
    <string name="redirect_url">https://www.skilex.in/development/ccavenue_app/service_net_amount.php</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="rsa_url">RSA Key Url</string>
    <string name="rsa_url_value">https://www.skilex.in/development/ccavenue_app/GetRSA.php</string>
    <string name="advance_payment">Payment</string>
    <string name="advance_amount">Advance Amount</string>
    <string name="status">Payment Status</string>
    <string name="booking_success">Success!</string>
    <string name="booking_failed">Sorry!</string>
    <string name="booking_success_comment">Your booking completed \n successfully</string>
    <string name="booking_failed_comment">Your booking failed</string>
    <string name="wallet_amt">Wallet Balance</string>
    <string name="wallet_add">Add Money to Wallet</string>
    <string name="wallet_success_comment">Money added to wallet \n successfully</string>
    <string name="wallet_failed_comment">Your transaction failed</string>
    <string name="points_earned_success">Your amount for points earned is </string>
    <string name="points_earned_fail">Your transaction failed</string>
    <string name="points_claim_success">Amount claimed and added to wallet</string>
    <string name="payment_success">Awesome!</string>
    <string name="payment_failed">Something\'s wrong!</string>
    <string name="payment_success_comment">Your service order completed \n successfully</string>
    <string name="payment_failed_comment">Your service order failed</string>
    <string name="go_home">Back to Home </string>
    <string name="try_again">Try Again</string>
    <string name="failed">Failed</string>
    <string name="completed">Completed</string>
    <string name="view_bill">View Bill</string>
    <string name="profile_title">Profile</string>
    <string name="about">About Skilex</string>
    <string name="share">Share app</string>
    <string name="rate_app">Rate app</string>
    <string name="logout">Logout</string>
    <string name="rating_title">Rate Service</string>
    <string name="rating_text">Rate your service</string>
    <string name="rate">Rate</string>
    <string name="rating">Reviews</string>
    <string name="sub_total">Sub Total</string>
    <string name="coupon_applied">Coupon Applied</string>
    <string name="coupon">Coupon</string>
    <string name="select_coupon">Select Coupon</string>
    <string name="apply_coupon">Apply</string>
    <string name="cancel_coupon">Cancel</string>
    <string name="grand_total_pay">Grand Total</string>
    <string name="service_person">Service Expert</string>
    <string name="share_invoice">Share Invoice</string>
</resources>