<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        app:labelVisibilityMode="selected"
        android:title="@string/home"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_services"
        android:enabled="true"
        android:icon="@drawable/ic_service"
        android:title="@string/services"
        app:labelVisibilityMode="selected"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile_black"
        app:labelVisibilityMode="selected"
        android:title="@string/profile_title"
        app:showAsAction="ifRoom|withText" />

</menu>