<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:minHeight="60dp" />

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:minHeight="60dp"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:src="@drawable/ic_arrow_back_white_24dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/back_btn"
            android:fontFamily="@font/helvetica"
            android:gravity="center_vertical|left"
            android:minHeight="60dp"
            android:padding="5dp"
            android:text="@string/refer_and_earn"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_margin="10dp"
            android:text="@string/total_points"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/points"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="000"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/claim"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/points"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-20dp"
            android:background="@drawable/buttton_round_no_color"
            android:text="@string/claim"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/claim"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/earn_amt"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/two"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/one"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/earn_amt_line"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/two"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="Your referral code"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/referral_code"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@id/two"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_square_grey"
            android:gravity="center"
            android:text="asdfasd"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_refer"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_below="@id/referral_code"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_round_color"
            android:drawableEnd="@drawable/ic_referfreiend_share"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/refer_friends"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/alerere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical"
            android:elevation="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/white"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="20dp"
                android:src="@drawable/ic_wallet_popupicon"/>

            <TextView
                android:id="@+id/teett"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wallet_add_money"
                android:background="@color/blue"
                android:textColor="@color/white"/>

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>