<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:minHeight="60dp" />

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:minHeight="60dp"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:src="@drawable/ic_arrow_back_white_24dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/back_btn"
            android:fontFamily="@font/helvetica"
            android:gravity="center_vertical|left"
            android:minHeight="60dp"
            android:padding="5dp"
            android:text="@string/wallet_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/wallet_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_add_moneytowallet"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/wallet_bal_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proceed_add_money"
            android:layout_below="@+id/wallet_img"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/wallet_bal_txt_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_title"
            android:layout_below="@+id/wallet_bal_txt"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/btn_add"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/add_amount"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_sqaure_color"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/wallet_add_money"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/add_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/enter_wallet_money"
            android:inputType="number"
            android:layout_below="@id/wallet_bal_txt_2"
            android:textSize="20sp"
            android:layout_margin="20dp"/>
        
    </RelativeLayout>

</LinearLayout>