<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fore"
    android:orientation="vertical">

    <View
        android:id="@+id/clickbait_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/conent"
        android:layout_alignParentTop="true" />


    <RelativeLayout
        android:id="@+id/conent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shadow_oval"
        android:elevation="20dp">

        <ImageView
            android:id="@+id/members_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:src="@drawable/ic_manage_address" />

        <TextView
            android:id="@+id/constituent_popup_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/members_img"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/choose_address"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/constituent_popup_count"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/address_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_1"
                    android:layout_marginStart="50dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/address_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />

                <TextView
                    android:id="@+id/address_two_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_2"
                    android:layout_marginStart="50dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/address_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />

            </RadioGroup>

            <Button
                android:id="@+id/btn_submit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_round_color"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>